--- a/app/src/main/res/layout/astro_weather.xml
+++ b/app/src/main/res/layout/astro_weather.xml
@@ -42,13 +42,12 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
+            android:layout_marginBottom="0dp"
             android:layout_marginTop="15dp"
             android:gravity="top|center"
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/tv_time_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Current Time: " />
@@ -58,6 +57,28 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="00:00:00" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="15dp"
+            android:layout_marginTop="15dp"
+            android:gravity="top|center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Current Date: " />
+
+            <TextView
+                android:id="@+id/tv_current_date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="null" />
+
         </LinearLayout>
 
         <android.support.v4.view.ViewPager
@@ -70,6 +91,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
         </android.support.v4.view.ViewPager>
+
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
