--- a/app/src/main/res/layout/fragment_moon.xml
+++ b/app/src/main/res/layout/fragment_moon.xml
@@ -22,7 +22,7 @@
                 android:textSize="18sp" />
 
             <EditText
-                android:id="@+id/editText"
+                android:id="@+id/et_moonrise"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:editable="false"
@@ -44,7 +44,7 @@
                 android:textSize="18sp" />
 
             <EditText
-                android:id="@+id/editText"
+                android:id="@+id/et_moonset"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:editable="false"
@@ -66,7 +66,7 @@
                 android:textSize="18sp" />
 
             <EditText
-                android:id="@+id/editText"
+                android:id="@+id/et_full_moon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:editable="false"
@@ -88,7 +88,7 @@
                 android:textSize="18sp" />
 
             <EditText
-                android:id="@+id/editText"
+                android:id="@+id/et_lunar_phase"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:editable="false"
@@ -112,7 +112,7 @@
                 android:textSize="18sp" />
 
             <EditText
-                android:id="@+id/editText"
+                android:id="@+id/et_day_of_lunar_month"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:editable="false"
