--- a/app/src/main/res/layout/fragment_sun.xml
+++ b/app/src/main/res/layout/fragment_sun.xml
@@ -22,7 +22,7 @@
                 android:textSize="18sp" />
 
             <EditText
-                android:id="@+id/editText"
+                android:id="@+id/et_sunrise"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:editable="false"
@@ -44,7 +44,7 @@
                 android:textSize="18sp" />
 
             <EditText
-                android:id="@+id/editText"
+                android:id="@+id/et_sunset"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:editable="false"
@@ -66,7 +66,7 @@
                 android:textSize="18sp" />
 
             <EditText
-                android:id="@+id/editText"
+                android:id="@+id/et_dusk"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:editable="false"
@@ -88,7 +88,7 @@
                 android:textSize="18sp" />
 
             <EditText
-                android:id="@+id/editText"
+                android:id="@+id/et_civil_dawn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:editable="false"
