--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -103,6 +103,28 @@
             android:layout_height="match_parent"
             android:gravity="center">
 
+            <TextView
+                android:id="@+id/tv_frequency"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Time zone offset:" />
+
+            <EditText
+                android:id="@+id/et_time_zone_offset"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:gravity="center"
+                android:inputType="numberSigned"
+                android:text="-1" />
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center">
+
             <Button
                 android:id="@+id/btn_save_and_exit"
                 android:layout_width="wrap_content"
