--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context="com.example.przemek.astroweather.SettingsActivity">
 
+
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -51,7 +52,7 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:gravity="center"
-                android:inputType="numberDecimal"
+                android:inputType="numberSigned|numberDecimal"
                 android:text="-1" />
         </TableRow>
 
@@ -72,7 +73,7 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:gravity="center"
-                android:inputType="numberDecimal"
+                android:inputType="numberSigned|numberDecimal"
                 android:text="-1" />
         </TableRow>
 
@@ -82,19 +83,16 @@
             android:gravity="center">
 
             <TextView
-                android:id="@+id/tv_frequency"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Frequency: " />
 
-            <EditText
-                android:id="@+id/et_frequency"
+            <Spinner
+                android:id="@+id/spinner_frequency"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:ems="10"
                 android:gravity="center"
-                android:inputType="number"
-                android:text="-1" />
+                android:textAlignment="center" />
 
         </TableRow>
 
@@ -104,19 +102,16 @@
             android:gravity="center">
 
             <TextView
-                android:id="@+id/tv_frequency"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Time zone offset:" />
 
-            <EditText
-                android:id="@+id/et_time_zone_offset"
+            <Spinner
+                android:id="@+id/spinner_timezone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:ems="10"
                 android:gravity="center"
-                android:inputType="numberSigned"
-                android:text="-1" />
+                android:textAlignment="center" />
 
         </TableRow>
 
