Time (in AstroWeather Activity) now checks time offset. Divided into 4 parts layouts and distinguish is portrait or landscape. Some refactore. Fix for layouts.

--- a/app/src/main/res/layout-xlarge/astro_weather_landscape.xml
+++ b/app/src/main/res/layout-xlarge/astro_weather_landscape.xml
@@ -21,11 +21,10 @@
         app:layout_constraintTop_toTopOf="parent">
 
 
-
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
+            android:layout_marginBottom="0dp"
             android:layout_marginTop="15dp"
             android:gravity="top|center"
             android:orientation="horizontal">
@@ -47,7 +46,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="15dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="0dp"
             android:gravity="top|center"
             android:orientation="horizontal">
 
@@ -68,6 +67,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="15dp"
             android:orientation="horizontal">
 
             <fragment
@@ -75,6 +75,8 @@
                 android:name="com.example.przemek.astroweather.MoonFragment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:layout_weight="1" />
 
             <fragment
@@ -82,6 +84,8 @@
                 android:name="com.example.przemek.astroweather.SunFragment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:layout_weight="1" />
         </LinearLayout>
 
