--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -44,6 +44,8 @@
                 android:id="@+id/tv_longitude"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:gravity="left"
                 android:text="Longitude: " />
 
             <EditText
@@ -65,6 +67,8 @@
                 android:id="@+id/tv_latitude"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:gravity="left"
                 android:text="Latitude: " />
 
             <EditText
@@ -85,6 +89,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:gravity="left"
                 android:text="Frequency: " />
 
             <Spinner
@@ -104,6 +110,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:gravity="left"
                 android:text="Time zone offset:" />
 
             <Spinner
@@ -123,7 +131,9 @@
             <Button
                 android:id="@+id/btn_save_and_exit"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="65dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
                 android:layout_marginTop="15dp"
                 android:layout_weight="1"
                 android:text="Save and exit" />
