--- a/app/src/main/res/layout/fragment_moon.xml
+++ b/app/src/main/res/layout/fragment_moon.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.przemek.astroweather.MoonFragment">
+    tools:context="com.example.przemek.astroweather.Fragment.MoonFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
