--- a/app/src/main/res/layout/fragment_weather_basic_info.xml
+++ b/app/src/main/res/layout/fragment_weather_basic_info.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.przemek.astroweather.Fragment.SunFragment">
+    tools:context="com.example.przemek.astroweather.Fragment.WeatherBasicInfoFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -15,15 +15,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/imageView2"
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:layout_gravity="center"
-                android:paddingBottom="30dp"
-                android:paddingTop="30dp"
-                android:src="@drawable/sun" />
 
             <TableLayout
                 android:layout_width="match_parent"
@@ -37,34 +28,11 @@
                         android:id="@+id/textView2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Sunrise: "
+                        android:text="Place:"
                         android:textSize="18sp" />
 
                     <EditText
-                        android:id="@+id/et_sunrise"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:editable="false"
-                        android:ems="10"
-                        android:focusable="false"
-                        android:inputType="textMultiLine"
-                        android:text="null" />
-                </TableRow>
-
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <TextView
-                        android:id="@+id/textView2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Sunset: "
-                        android:textSize="18sp" />
-
-                    <EditText
-                        android:id="@+id/et_sunset"
+                        android:id="@+id/et_place"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -83,11 +51,11 @@
                         android:id="@+id/textView2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Dusk: "
+                        android:text="Latitude: "
                         android:textSize="18sp" />
 
                     <EditText
-                        android:id="@+id/et_dusk"
+                        android:id="@+id/et_latitude"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -106,18 +74,66 @@
                         android:id="@+id/textView2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Civil dawn: "
+                        android:text="Longitude:"
                         android:textSize="18sp" />
 
                     <EditText
-                        android:id="@+id/et_civil_dawn"
+                        android:id="@+id/et_longitude"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:editable="false"
                         android:ems="10"
                         android:focusable="false"
-                        android:inputType="textMultiLine|textPersonName"
+                        android:inputType="textMultiLine"
+                        android:text="null" />
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        android:id="@+id/textView2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Time: "
+                        android:textSize="18sp" />
+
+                    <EditText
+                        android:id="@+id/et_time"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:editable="false"
+                        android:ems="10"
+                        android:focusable="false"
+                        android:inputType="textMultiLine"
+                        android:text="null" />
+
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        android:id="@+id/textView2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:singleLine="true"
+                        android:text="Air pressure: "
+                        android:textSize="18sp" />
+
+                    <EditText
+                        android:id="@+id/et_air_pressure"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:editable="false"
+                        android:ems="10"
+                        android:focusable="false"
+                        android:inputType="textMultiLine"
                         android:text="null" />
                 </TableRow>
 
