--- a/app/src/main/res/layout/fragment_weather_basic_info.xml
+++ b/app/src/main/res/layout/fragment_weather_basic_info.xml
@@ -51,6 +51,29 @@
                         android:id="@+id/textView2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:text="Temperature: "
+                        android:textSize="18sp" />
+
+                    <EditText
+                        android:id="@+id/et_temperature"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:editable="false"
+                        android:ems="10"
+                        android:focusable="false"
+                        android:inputType="textMultiLine"
+                        android:text="null" />
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        android:id="@+id/textView2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:text="Latitude: "
                         android:textSize="18sp" />
 
